debug/helm-chart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipline
  labels:
    app: zipline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zipline
  template:
    metadata:
      labels:
        app: zipline
    spec:
      serviceAccountName: zipline-service-account
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: zipline
          image: ghcr.io/diced/zipline:3.7.12
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: zipline-uploads
              mountPath: /zipline/uploads
            - name: zipline-public
              mountPath: /zipline/public
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: zipline-uploads
          persistentVolumeClaim:
            claimName: pvc-zipline-uploads
        - name: zipline-public
          persistentVolumeClaim:
            claimName: pvc-zipline-public
