debug/helm-chart/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zipline
  labels:
    app: zipline

spec:
  ports:
    - port: 3000
      name: web
      protocol: TCP
      targetPort: web
  selector:
    app: zipline
