debug/helm-chart/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zipline-network-policy
spec:
  podSelector:
    matchLabels:
      app: zipline
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
      ports:
        - port: 5432 # postgres
          protocol: TCP
    # Allow DNS lookups
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # Deny others
    - {}
